~feat(jwt) add jwt token gen and secure endpoints
