# config/openapi.yml
@@ -16,8 +16,8 @@ servers:
   - url: /api/v1
 
 tags:
-  - name: greeting
-    description: Greeting APIs
+  - name: users
+    description: Users APIs
 
 paths:
   /signIn:
@@ -52,6 +52,8 @@ paths:
       tags:
         - users
       operationId: getUsers
+      security:
+        - bearerAuth: []
       responses:
         200:
           description: Success
@@ -94,6 +96,8 @@ paths:
           schema:
             type: string
             format: uuid
+      security:
+        - bearerAuth: []
       responses:
         200:
           description: Success
@@ -127,6 +131,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateUser'
+      security:
+        - bearerAuth: []
       responses:
         204:
           description: User was updated
@@ -146,11 +152,18 @@ paths:
           description: The id of own user
           schema:
             type: string
+      security:
+        - bearerAuth: []
       responses:
         202:
           description: Delete request was accepted
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     User:
       type: object
