# src/utils/server.ts
@@ -68,6 +68,9 @@ export default async function createServer(): Promise<Express> {
         `${method}: ${descriptor[0]} : ${(descriptor[1] as any).name}`,
       );
     },
+    security: {
+      bearerAuth: api.auth,
+    },
   });
 
   connect(server);
